<resources>
    <string name="app_name">Sistem Informasi Adat dan Budaya Bugis Makassar</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello, this if Fragment!</string>

    <string name="home">Beranda</string>
    <string name="sejarah_bugis">Sejarah Bugis-Makassar</string>
    <string name="lontara">Lontara</string>
    <string name="rumah_adat">Rumah Adat</string>
    <string name="pakaian_adat">Pakaian Adat</string>
    <string name="adat_pernikahan">Adat Pernikahan</string>
    <string name="tempat_wisata">Tempat Wisata</string>
    <string name="musik_tradisional">Musik Tradisional</string>
    <string name="tarian_tradisional">Tarian Tradisional</string>
    <string name="info">Tentang Kami</string>
    <string name="hot_news">Hot News</string>
    <string name="hot_spot">Hot Spot</string>
    <string name="log_out">Log Out</string>

    <string name="riswani">Riswani Nurkhatima lahir di Makassar, 22 Mei 2001. Peneliti, merupakan anak ketiga dari tiga bersaudara. Anak dari pasangan Ayahanda Muh. Ridwan, S. Pd dan Ibunda Salmah, S. Pd. Peneliti memulai pendidikan formal 2006 di SD Negeri Sabbala dan berhasil menyelesaikan sekolah dasar pada tahun 2012, lalu peneliti melanjutkan pendidikan di SMP Negeri 1 Bontonompo dan tamat pada tahun 2015 kemudian pada tahun yang sama peneliti melanjutkan pendidikan di SMA Negeri 3 Bontompo pada tahun 2015 dan selesai pada tahun 2018. Pada tahun 2018 peneliti melanjutkan pendidikan perguruan tinggi negeri dan terdaftar sebagai mahasiswa Universitas Negeri Makassar (UNM) Fakultas Teknik pada Program Studi Teknik Elektro (D3)</string>
    <string name="hasnur">Hasnur Syah lahir di Paomallimpoe, 10 September 1999. Peneliti merupakan anak kelima dari lima bersaudara. Anak dari pasangan Ayahanda Syarifuddin Darise dan Ibunda Hj. Nurlela (almh). Peneliti memulai pendidikan formal 2006 di SD Negeri 80 Paomallimpoe dan berhasil menyelesaikan sekolah dasar pada tahun 2012, lalu peneliti melanjutkan pendidikan di SMP Perguruan Islam Ganra dan tamat pada tahun 2015, kemudian pada tahun yang sama peneliti melanjutkan pendidikan di SMA Negeri 1 Soppeng pada tahun 2015 dan selesai pada tahun 2018. Pada tahun 2018 peneliti melanjutkan pendidikan di perguruan tinggi negeri dan terdaftar sebagai mahasiswa Universitas Negri Makassar (UNM) Fakultas Teknik pada Program Studi Teknik Elektro (D3).</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id lectus viverra ligula imperdiet cursus. Praesent porta faucibus lorem lobortis pulvinar. Mauris feugiat dui sed interdum accumsan. Donec faucibus velit ac dolor finibus, id egestas orci egestas. Vestibulum non dictum augue, in egestas magna. Duis pharetra turpis at fermentum luctus. Praesent ut nisl mauris. Donec tincidunt interdum gravida.</string>
    <string name="title_activity_add_adat_pernikahan">AddAdatPernikahanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>